# this-little-wiggy

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  RELEASE_v0.0.2.md  RELEASE_v0.0.2_LINKEDIN.md  RELEASE_v0.0.2_REDDIT.md  pyproject.toml
.claude-plugin/: plugin.json
.dev-marketplace/.claude-plugin/: marketplace.json
agents/: task-evaluator.md
commands/: init.md
hooks/: hooks.json
scripts/: prompt-evaluator.py  run-hook.sh
skills/task-analyzer/: SKILL.md
skills/task-analyzer/references/: ralph-template.md
tests/: conftest.py  test_hook.py  test_skill.py
